[project]
name = "tennis-booking-tool"
version = "0.1.0"
description = "Automated tennis court booking for Clapham Common (ClubSpark / LTA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
]

[project.scripts]
tennis-book = "tennis_booking.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tennis_booking"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
