[project]
name = "tennis-booking-tool"
version = "0.1.0"
description = "Automated tennis court booking for Clapham Common (ClubSpark / LTA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.44",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "google-cloud-secret-manager>=2.20",
    "sendgrid>=6.11",
    # Ships the IANA tz database so ZoneInfo("Europe/London") works on hosts
    # without system tzdata (Windows, slim containers).
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
]

[project.scripts]
tennis-book = "tennis_booking.cli:app"
tennis-book-job = "tennis_booking.job:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tennis_booking"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
